k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ums-backend
  labels:
    app: ums-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ums-backend
  template:
    metadata:
      labels:
        app: ums-backend
    spec:
      containers:
      - name: ums-backend
        image: ghcr.io/thanatadcs/scalable-p1/ums-backend:latest
        ports:
          - containerPort: 8080
