k8s/frontend-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: ums-frontend
spec:
  selector:
    app: ums-frontend
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  80
