k8s/mariadb-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  type:  ClusterIP
  ports:
  - name:  http
    port:  3306
    targetPort:  3306
