k8s/redis-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis
spec:
  selector:
    app: redis
  type:  ClusterIP
  ports:
  - name:  http
    port:  6379
    targetPort:  6379
